# recall

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  recall.py
examples/: data.jsonl  data.yaml  facts.yaml
tests/: test_clipboard.py  test_data_loading.py  test_doctor.py  test_format.py  test_get.py  test_init.py  test_open.py  test_search.py  test_secret.py
