[project]
name = "recaller"
version = "0.2.0"
description = "A grep-friendly CLI data jar for URLs, IDs, account numbers, snippets, and vault-backed secret references."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "YY Ahn" }]
keywords = ["cli", "secrets", "1password", "jsonl", "grep", "knowledge", "clipboard"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/yy/recall"
Repository = "https://github.com/yy/recall"

[project.scripts]
recall = "recall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["recall.py"]

[tool.hatch.build.targets.sdist]
include = ["recall.py", "README.md", "LICENSE", "examples/", "tests/"]
